# mucken-env

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: game.py  random_agent.py
mucken_env/: __init__.py
mucken_env/cards/: AbstractCardStrategy.py  Card.py  CardFactory.py  GeierCardStrategy.py  MuckCardStrategy.py  WenzCardStrategy.py  __init__.py  enums.py
mucken_env/envs/: __init__.py  mucken.py  renderer.py
mucken_env/wrappers/: README.md  __init__.py  gifwrapper.py  rlwrapper.py
tests/: TestCardMethods.py  testenv.py  testgeier.py  testmuck.py  testwenz.py
